# talonmies_bot

./: .gitignore  EXAMPLE_TOKEN  LICENSE  README.md  config.ini  config_example  config_example.ini  pyproject.toml  requirements.txt  start_bot.py
src/: database.py  talonmies.py
src/commands/: __init__.py  buttons.py  minecraft.py  scoreboard.py  scrandle.py  start.py  task.py  wildu.py
src/commands/utils/: helpers.py  task.py  warnings.py
src/handlers/: scran_reader.py
src/models/: scran_crud.py  scran_model.py  scrandle_games_crud.py  scrandle_games_model.py  scrandle_participants_crud.py  scrandle_participants_model.py  user_crud.py  user_model.py
src/tests/: conftest.py  test_scran.py
src/utils/: file_handlers.py
